[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]

[project]
name = "distributed_kv_manager"
version = "0.1.0"
description = "Distributed KV Manager with Crail integration"
authors = [{ name="Yan Tiexin", email="yan_tx@sjtu.edu.cn" }]
dependencies = []

[tool.setuptools.package-data]
"distributed_kv_manager" = ["vllm_adapter/*.py"]
